force-app/main/default/objects/TIS_Summary__c/TIS_Summary__c.object-meta.xml
<CustomObject>
    <label>TIS Summary</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TIS Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>