force-app/main/default/objects/TIS_Summary__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>TIS Summary</relationshipLabel>
    <relationshipName>TIS_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>