force-app/main/default/objects/TIS_Summary__c/fields/Contract_Request__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Request</label>
    <referenceTo>Contract_Request__c</referenceTo>
    <relationshipLabel>TIS Summary</relationshipLabel>
    <relationshipName>TIS_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>