force-app/main/default/objects/TIS_Summary__c/fields/Duration_for_Cases__c.field-meta.xml
<CustomField>
    <fullName>Duration_for_Cases__c</fullName>
    <formula>TEXT(Hrs__c) &amp; &quot; hours &quot; &amp; TEXT(Mins__c) &amp; &quot; mins &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration_for_Cases</label>
    <type>Text</type>
</CustomField>