force-app/main/default/objects/TIS_Summary__c/fields/Hrs__c.field-meta.xml
<CustomField>
    <fullName>Hrs__c</fullName>
    <label>Hrs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>