force-app/main/default/objects/TIS_Summary__c/fields/Last_Date_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Time_Out__c</fullName>
    <label>Last Date/Time Out</label>
    <type>DateTime</type>
</CustomField>