force-app/main/default/objects/TIS_Summary__c/fields/Mins__c.field-meta.xml
<CustomField>
    <fullName>Mins__c</fullName>
    <label>Mins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>