force-app/main/default/objects/TIS_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Contract_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>